--- a/styles.css
+++ b/styles.css
@@ -172,4 +172,21 @@ body {
     width: 50px;
     height: 50px;
   }
+  .progress-container {
+  width: 100%;
+  max-width: 400px;
+  height: 10px;
+  background-color: #444;
+  border-radius: 5px;
+  overflow: hidden;
+  margin: 20px 0;
+  position: relative;
+}
+
+.progress-bar {
+  width: 0%;
+  height: 100%;
+  background-color: #1db954;
+  transition: width 0.1s linear;
+}
 }
