--- a/styles.css
+++ b/styles.css
@@ -47,15 +47,16 @@ body {
 
 /* Suggestions List */
 #suggestions-list {
-  width: 100%;
-  max-width: 400px;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 5px 0 0;
   background-color: #1c1c1c;
   border: 1px solid #444;
   border-radius: 5px;
+  max-width: 400px;
   color: white;
+  position: absolute;
+  z-index: 10;
 }
 
 #suggestions-list li {
