--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ a {
   width: 100%;
   max-width: 600px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -72,6 +71,7 @@ a {
 /* Playlist Container */
 .playlist-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
   margin-bottom: 15px;
@@ -209,16 +209,13 @@ a {
   background-color: #333;
 }
 
-/* Responsive Design */
 @media (max-width: 768px) {
-  .playlist-container {
+  .search-container {
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
   }
 
-  .progress-container {
-    flex-direction: column;
-    gap: 5px;
+  .playlist-container {
+    justify-content: space-around;
   }
 }
-
